# FastAPI-Template

./: .commitlintrc.json  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  cli.py  config.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: ci.yml  dependency-check.yml  release.yml
api/: __init__.py
api/base/: __init__.py  crud.py
api/v1/: __init__.py  api.py
config/: .env.dev  .env.dev_  .env.example  .env.prod  __init__.py  cache.yaml  cache_setting.py  config.yaml  database.yaml  manager.py  modules.yaml
constants/: __init__.py  system.py  users.py
core/: __init__.py
core/I18n/: i18n.py
core/cache/: __init__.py  decorators.py  exceptions.py  handlers.py  instance.py  key.py  manager.py  remade.md  serializer.py  setting.py
core/config/: __init__.py  manager.py  readme.md  setting.py
core/constants/: codes.py  enums.py  system.py
core/db/: __init__.py  manager.py  setting.py
core/decorators/: cache.py
core/loge/: __init__.py  (+3 more)
docs/: README.md  to_code.md
models/: __init__.py  activity.py  attendance.py  audit_log.py  config.py  course.py  department.py  enrollment.py  evaluation.py  exam.py  file.py  grade.py  library.py  manager.py  menu.py  message.py  notification.py  parent.py  permission.py  role.py  semester.py  student.py  system.py  tasks.py  teacher.py  token.py  user.py
pipe/: all_install.txt  base.txt  requirements.txt  requirements_2.txt  requirements_3.txt
schemas/: __init__.py  activity.py  class_.py  config.py  course.py  department.py  enrollment.py  evaluation.py  exam.py  grade.py  major.py  manager.py  menus.py  message.py  notification.py  permission.py  record.py  resource.py  roles.py  school.py  student.py  subject.py  system.py  tasks.py  teacher.py  teaching.py  title.py  user.py  validator.py
services/: readme.md
tests/: __init__.py  conftest.py  test_cache.py  test_middlewares.py  test_performance.py
utils/: cache_warmer.py  files.py  http.py  redis_cli.py  security.py
(+419 files in other folders)
